--- a/cv.html
+++ b/cv.html
@@ -5,10 +5,26 @@
 <head>
   <meta charset="utf-8">
   <title>title</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-  <!--Tee tehtävät tänne-->
+  <div class="header">
+    <h1>CV</h1>
+    <h1>Justus Keinänen</h1>
+  </div>
+
+  <div>
+    <p>
+      Olen opiskellut kaksi vuotta Haaga-Heliassa it-tradenomiksi. Tänä syksynä olen aloittanut
+opinnot Helsingin Yliopistossa, pääaineena tietojenkäsittely. Olen keskittynyt opinnoissani
+ohjelmistotuotantoon ja ohjelmointiin. Olen huolellinen ja ahkera työntekijä, johon voi aina
+luottaa. Opin nopeasti uusia asioita ja opettelen jatkuvasti uusia tekniikoita. Pyrin
+perehtymään aiheisiin perinpohjaisesti ja haen tehokkaasti uutta tietoa. Työkaverina olen
+avulias ja kärsivällinen. Asiakkaiden/loppukäyttäjien kanssa toimiminen on luontevaa, sillä
+olen ystävällinen ja johdonmukainen.
+    </p>
+  </div>
 </body>
 
 </html>
