--- a/cv.html
+++ b/cv.html
@@ -15,16 +15,32 @@
   </div>
 
   <div>
+    <hr/>
     <p>
       Olen opiskellut kaksi vuotta Haaga-Heliassa it-tradenomiksi. Tänä syksynä olen aloittanut
 opinnot Helsingin Yliopistossa, pääaineena tietojenkäsittely. Olen keskittynyt opinnoissani
 ohjelmistotuotantoon ja ohjelmointiin. Olen huolellinen ja ahkera työntekijä, johon voi aina
 luottaa. Opin nopeasti uusia asioita ja opettelen jatkuvasti uusia tekniikoita. Pyrin
 perehtymään aiheisiin perinpohjaisesti ja haen tehokkaasti uutta tietoa. Työkaverina olen
-avulias ja kärsivällinen. Asiakkaiden/loppukäyttäjien kanssa toimiminen on luontevaa, sillä
+avulias ja kärsivällinen. Asiakkaiden ja loppukäyttäjien kanssa toimiminen on luontevaa, sillä
 olen ystävällinen ja johdonmukainen.
     </p>
+    <hr/>
   </div>
+  
+  <h2>Koulutus</h2>
+
+  <div class="container-1">
+      <p>Helsingin Yliopisto, tietojenkäsittelytiede</p>
+      <p>2020 --></p>
+    </div>
+  <div class="container-1">
+      <p>Haaga-Helia amk, tradenomi</p>
+      <p>2018-2020</p>
+  </div>
+
+
+
 </body>
 
 </html>
