--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@
   <div class="intro">
     <hr/>
     <p>
-      Olen opiskellut kaksi vuotta Haaga-Heliassa it-tradenomiksi. Tänä syksynä olen aloittanut
-opinnot Helsingin Yliopistossa, pääaineena tietojenkäsittely. Olen keskittynyt opinnoissani
-ohjelmistotuotantoon ja ohjelmointiin. Olen huolellinen ja ahkera työntekijä, johon voi aina
-luottaa. Opin nopeasti uusia asioita ja opettelen jatkuvasti uusia tekniikoita. Pyrin
-perehtymään aiheisiin perinpohjaisesti ja haen tehokkaasti uutta tietoa. Työkaverina olen
-avulias ja kärsivällinen. Asiakkaiden ja loppukäyttäjien kanssa toimiminen on luontevaa, sillä
-olen ystävällinen ja johdonmukainen.
+      Tietojenkäsittelytieteen opiskelija. 
     </p>
     <hr/>
     <br/>
@@ -36,11 +30,17 @@ olen ystävällinen ja johdonmukainen.
       <tr><td>
         <h2>Koulutus</h2>
       </td></tr>
+
+      <tr>
+          <td>>Itä-Suomen Yliopisto, tietojenkäsittelytiede</td>
+          <td><pre>   </pre></td>
+          <td>2022 ->></td>
+      </tr>
         
       <tr>
           <td>Helsingin Yliopisto, tietojenkäsittelytiede </td>
           <td><pre>   </pre></td>
-          <td>2020 --></td>
+          <td>2020-2022></td>
       </tr>
         
       <tr>
