Advvances in contact-page and styling, add picture to /home

--- a/index.html
+++ b/index.html
@@ -3,32 +3,50 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>title</title>
+<title>Justus Keinänen</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header class="header">
         <h1>Justus Keinänen</h1>
     </header>
-    <nav class="nav">
+    <nav>
         <hr />
-        <a class="nav-item" href="./cv.html">
-            CV
-        </a> |
-        <a class="nav-item" href="./contact.html">
-            Contact
-        </a> |
-        <a class="nav-item" href="./hobbies.html">
-            Hobbies
-        </a>
+        <ul>
+        
+            <li>
+                <a href="./index.html">Home</a>
+            </li>
+            <li>
+                <a href="./cv.html">CV</a>
+            </li>
+            <li>
+                <a href="./contact.html">Contact</a>
+            </li>
+            <li>
+                <a href="./hobbies.html">Hobbies</a>
+            </li>
+        </ul>
         <hr />
         <br />
-
     </nav>
+    <div class=content>
+        <img src="./omakuva.jpg" alt="photo of me" />
+
+        <article>
+            Olen 36-vuotias tietojenkäsittelytieteen opiskelija Itä-Suomen yliopistosta. Olen kiinnostunut ohjelmoinnista ja
+            tietoturvasta. Olen suorittanut tietojenkäsittelytieteen perus- ja aineopinnot ja tavoitteenani on saada kandidaatin
+            tutkielma valmiiksi vuoden 2025 keväällä, jonka jälkeen jatkan maisteriopintoihin. Työkokemukseni on edelliseltä
+            alalta, olen työskennellyt mm. ravintolakokkina ja taiteilijana. Harrastuksiini kuuluu elektroniikka-askartelu,
+            tietokonepelit ja lukeminen. Kuntoa pidän yllä luonnossa liikkumalla, juosten, pyöräillen ja hiihtäen. Olen
+            kiinnostunut myös yhteiskunnallisisista asioista ja politiikasta. Työskentely on minulle tärkeää ja olen valmis
+            oppimaan uutta ja kehittymään työssäni. Minua pidetään hyvänä työ- ja opiskelukaverina, ahkerana ja luotettavana.
+            Olen myös hyvä ongelmanratkaisija ja pystyn työskentelemään paineen alla.
+        </article>
+        </div>
 
 
-
-    <footer class="footer">
+    <footer>
         <hr />
         <p>Justus Keinänen</p>
         <hr />
